# ToHoToNIT

./: .gitignore  CMakeLists.txt  Character.h  README.md  Readme.md  SatsukiHana.cpp  SatsukiHana.h  SatsukiKaze.cpp  SatsukiKaze.h  TestChara.cpp  TestChara.h  create-makefile.sh  makefile  test.txt
.github/workflows/: CI.yml
Chara/: SatsukiHana.hpp  SatsukiKaze.hpp  TestChara.cpp
src/: Config.cpp  Config.hpp  FPS.cpp  FPS.hpp  GameWindow.cpp  GameWindow.hpp  ImageManager.cpp  ImageManager.hpp  Operate.cpp  Operate.hpp  Screen.hpp  ScreenManager.cpp  ScreenManager.hpp  SoundManager.cpp  SoundManager.hpp  main.cpp
src/AssetsManager/: ImageManager.cpp  ImageManager.hpp  SoundManager.cpp  SoundManager.hpp
src/Const/: Buttons.hpp  CharacterID.hpp  FullScreenMode.hpp  ImageID.cpp  ImageID.hpp  ItemID.hpp  RefPoint.hpp  ScreenID.hpp  SoundID.cpp  SoundID.hpp  TouchRect.cpp  TouchRect.hpp  WindowSize.hpp
src/Game/Chara/: Character.cpp  Character.hpp  MarisaKoi.cpp  MarisaMa.cpp  MarisaMa.hpp  ReimuRei.cpp  ReimuRei.hpp  ReimuYume.cpp  SatsukiHana.cpp  SatsukiHana.hpp  SatsukiKaze.cpp  SatsukiKaze.hpp  TestChara.cpp  TestChara.hpp
src/Game/Enemy/: Enemy.cpp  Enemy.hpp  EnemyBarrage.cpp  EnemyBarrage.hpp  TestEnemy.cpp  (+3 more)
src/InputManager/: JoystickManager.cpp  JoystickManager.hpp  KeyboardManager.cpp  KeyboardManager.hpp  TouchManager.cpp  TouchManager.hpp
src/Screens/: CharacterSelectScreen.cpp  CharacterSelectScreen.hpp  GameScreen.cpp  GameScreen.hpp  ModeSelectScreen.cpp  ModeSelectScreen.hpp  MusicRoomScreen.cpp  MusicRoomScreen.hpp  OptionScreen.cpp  OptionScreen.hpp  Screen.hpp  TestScreen.cpp  TestScreen.hpp  TitleScreen.cpp  TitleScreen.hpp
(+54 files in other folders)
